@@ -9,8 +9,8 @@
 
 7/15/22
 - Add Question Page
-    - clear fields when submitted
-    - confirmation message
+    - clear fields when submitted  ------
+    - confirmation message  ------
     - space between radio button and text field
     - improve styling
 - Quiz Selection Page
@@ -35,6 +35,10 @@
         - pictures?
         - how to implement true/false questions?
             - questions right now are set for 4 answer choices
+
+7/16/22
+    - Add Question
+        - bugs when adding fields with apostrophes. check for other unique characters (slash, quote, etc.)
 
 
 
